--- a/index.html
+++ b/index.html
@@ -496,7 +496,13 @@
     const fechaInicio = new Date(startTime).toISOString();
     const gpxData = `
         <?xml version="1.0" encoding="UTF-8"?>
-        <gpx xmlns="http://www.topografix.com/GPX/1/1" creator="RunnersPace Pro" version="1.1">
+        <gpx xmlns="http://www.topografix.com/GPX/1/1" creator="RunnersPace Pro" version="1.1" 
+             xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+             xsi:schemaLocation="http://www.topografix.com/GPX/1/1 http://www.topografix.com/GPX/1/1/gpx.xsd">
+            <metadata>
+                <name>${nombreCarrera}</name>
+                <time>${fechaInicio}</time>
+            </metadata>
             <trk>
                 <name>${nombreCarrera}</name>
                 <desc>Carrera exportada desde RunnersPace Pro</desc>
@@ -504,7 +510,7 @@
                     ${path.getPath().getArray().map(point => `
                         <trkpt lat="${point.lat()}" lon="${point.lng()}">
                             <ele>0</ele>
-                            <time>${new Date().toISOString()}</time>
+                            <time>${new Date(point.getTime()).toISOString()}</time>
                         </trkpt>
                     `).join('')}
                 </trkseg>
