--- a/index.html
+++ b/index.html
@@ -502,33 +502,34 @@
         }
 
         function exportarGPX() {
-    const gpxData = `
-        <gpx version="1.1" creator="RunnersPace Pro" xmlns="http://www.topografix.com/GPX/1/1">
-            <metadata>
-                <name>${document.getElementById('nombreCarrera').value}</name>
-                <time>${new Date().toISOString()}</time>
-            </metadata>
-            <trk>
-                <name>${document.getElementById('nombreCarrera').value}</name>
-                <trkseg>
-                    ${path.getPath().getArray().map((point, index) => `
-                        <trkpt lat="${point.lat()}" lon="${point.lng()}">
-                            <ele>${getElevationForPoint(point)}</ele>
-                            <time>${getTimestampForPoint(index)}</time>
-                        </trkpt>
-                    `).join('')}
-                </trkseg>
-            </trk>
-        </gpx>
-    `;
-    const blob = new Blob([gpxData], { type: 'application/gpx+xml' });
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url;
-    a.download = `${document.getElementById('nombreCarrera').value}.gpx`;
-    a.click();
-    URL.revokeObjectURL(url);
-}
+      const pathArray = path.getPath();
+      let gpxData = `<?xml version="1.0" encoding="UTF-8"?>
+      <gpx xmlns="http://www.topografix.com/GPX/1/1">
+        <trk>
+          <name>Recorrido de Carrera</name>
+          <trkseg>\n`;
+
+      for (let i = 0; i < pathArray.getLength(); i++) {
+        const point = pathArray.getAt(i);
+        gpxData += `            <trkpt lat="${point.lat()}" lon="${point.lng()}">\n`;
+        gpxData += `                <ele>0.0</ele>\n`;
+        gpxData += `            </trkpt>\n`;
+      }
+
+      gpxData += `          </trkseg>
+        </trk>
+      </gpx>`;
+
+      const blob = new Blob([gpxData], { type: 'text/xml' });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement('a');
+      a.style.display = 'none';
+      a.href = url;
+      a.download = 'recorrido.gpx';
+      document.body.appendChild(a);
+      a.click();
+      URL.revokeObjectURL(url);
+    }
 
         function tomarFoto() {
       navigator.mediaDevices.getUserMedia({ video: true })
