--- a/index.html
+++ b/index.html
@@ -93,18 +93,22 @@
             width: auto;
             padding: 5px 10px;
             margin: 5px;
-        }
-        footer {
-            text-align: center;
-            margin-top: 5px;
-            padding: 5px;
+                }
+        #creator-info {
+            position: static;
             background-color: #112075;
             color: white;
-            border-radius: 8px;
+            padding: 5px 0;
+            text-align: center;
+            font-size: 0.8em;
+            width: 100%;
+            box-sizing: border-box;
         }
+
     </style>
 </head>
 <body>
+    <div id="creator-info">Desarrollada por Diego Valdés</div>
     <div class="container">
         <h1>Alcanza tu ritmo</h1>
         <h2>Versión de prueba</h2>
