--- a/index.html
+++ b/index.html
@@ -103,8 +103,27 @@
             font-size: 0.8em;
             width: 100%;
             box-sizing: border-box;
+        }footer {
+            text-align: center;
+            margin: 10px auto 0;
+            padding: 0,5px;
+            background-color: #112075;
+            color: white;
+            border-radius: 20px;
+            font-size: 1em;
+            max-width: 90%;
         }
 
+        #creator-info {
+            position: static;
+            background-color: #112075;
+            color: white;
+            padding: 5px 0;
+            text-align: center;
+            font-size: 0.8em;
+            width: 100%;
+            box-sizing: border-box;
+        }
     </style>
 </head>
 <body>
@@ -150,7 +169,7 @@
         <div id="carrerasGuardadas" class="card"></div>
         <div id="map"></div>
         <footer>
-            <p>Aplicación creada por Diego Valdés</p>
+            <p>Versión de prueba</p>
         </footer>
     </div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNoJAfM3yuVwAcmXoJ2z8whnG2-2TJPpM&callback=initMap" async defer></script>
