--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
             carreraGuardada = false; // Resetear el estado guardado
         }
         
-        mostrarResultados();
+        mostrarResultados(); {
 
         function actualizarDistancia(nuevaDistancia) {
         distanciaRecorrida += nuevaDistancia;
